<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jingnan.assignment2.MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterNamesTitle"
        android:textSize="20dp"
        android:textColor="#ff1b22ff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:ems="10"
        android:id="@+id/name"
        android:layout_marginTop="47dp"
        android:hint="@string/Name"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/age"
        android:layout_marginTop="20dp"
        android:layout_below="@id/name"
        android:hint="@string/age"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/selectMovie"
        android:id="@+id/selectMovieLabel"
        android:layout_below="@+id/age"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/movieSpinner"
        android:entries="@array/movies_array"
        android:prompt="@string/chooseAMovie"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/selectMovieLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clickable="true"
        android:spinnerMode="dropdown" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/add"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/movieSpinner"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:id="@+id/done"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/add"
        android:layout_alignLeft="@+id/add"
        android:layout_alignStart="@+id/add" />


</RelativeLayout>