<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jingnan.assignment2.MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/storeLabel"
        android:id="@+id/storeLabel"
        android:textSize="20dp"
        android:textColor="#ff1b22ff" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:id="@+id/fileNameField"
        android:inputType="textCapWords"
        android:layout_below="@+id/storeLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:hint="@string/fileName"
        android:layout_alignRight="@+id/storeLabel"
        android:layout_alignEnd="@+id/storeLabel" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtLabel"
        android:layout_marginTop="75dp"
        android:layout_toRightOf="@id/fileNameField"
        android:text="@string/txt"
        android:textSize="30dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store"
        android:id="@+id/btnStore"
        android:layout_below="@+id/storeLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="168dp" />
</RelativeLayout>